Version 5.6
-----------
Bug Fixes:
* MDI accelerators (Ctrl+F6) now work
* Fixed notification reflection in CDialog

New Features:
* Property Sheets are now supported. The Property sheet generic demonstrates
  the creation of wizards, as well as modal and modeless property sheets.
* The owner drawing of menus has been moved from CMenubar to CFrame. Now all
  menus belonging to CFrame (or CMainFrame) can be themed. Also the various
  functions controlling the owner drawing of menus are now located in CFrame,
  This allows them to be easily customised by overriding them in CMainFrame 

Added CPropertySheet class
Added CPropertyPage class
Added CFrame::DrawCheckmark
Added CFrame::DrawMenuItem
Added CFrame::DrawMenuText
Added CFrame::OnDrawItem
Added CFrame::OnInitMenuPopup
Added CFrame::OnMeasureItem
Added CFrame::SetMenuIcons
Added CWnd::CenterWindow
Added CMDIFrame::GetActiveMDIChildCWnd
Removed CDialog::Center
Removed CMenubar::SetIcons

Version 5.5
-----------
Bugs Fixed:
* Visual Studio 6 (without a Platform SDK update) reports a 'TB_GETSTRING' 
  as an undeclared identifier.
* Dev-C++ reports a warning passing NULL used for non-pointer
* Threads sample, can generate an exception in release mode
* Performance sample, m_nTestWindows not initialised
* Corrected text layout for toolbar buttons with TBSYLE_DROPDOWN style.

New Features:
* Themes are now enabled by default. CFrame::SetTheme defines the default
  theme for the rebar, toolbar and menubar. To modify the theme, override
  SetTheme in CMainFrame. To disable themes, set m_bUseThemes to FALSE in
  CMainFrame::OnCreate.
* The default color of a splitter bar is set to the background color of 
  the rebar.  
* If a resource for disabled toolbar items isn't provided, an ImageList
   for disabled buttons is created for you. This imagelist is used for
   displaying disabled toobar buttons, and disabled menu items with an icon.
* Updated Rebar themes